# Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  PLUGINS.md  README.md
.github/workflows/: main-branches.yml
docs/html/: _a_light_8hpp.html  _a_light_8hpp.js  _a_light_8hpp_source.html  _a_materials_8hpp.html  _a_materials_8hpp.js  _a_materials_8hpp_source.html  _a_shape_8hpp.html  _a_shape_8hpp.js  _a_shape_8hpp_source.html  _ambient_light_8cpp.html  _ambient_light_8cpp.js  _ambient_light_8hpp.html  _ambient_light_8hpp.js  _ambient_light_8hpp_source.html  _camera_8cpp.html  _camera_8hpp.html  _camera_8hpp.js  _camera_8hpp_source.html  _cone_8cpp.html  _cone_8cpp.js  _cone_8hpp.html  _cone_8hpp.js  _cone_8hpp_source.html  _cone_inf_8cpp.html  _cone_inf_8cpp.js  _cone_inf_8hpp.html  _cone_inf_8hpp.js  _cone_inf_8hpp_source.html  _cylinder_8cpp.html  _cylinder_8cpp.js  _cylinder_8hpp.html  _cylinder_8hpp.js  _cylinder_8hpp_source.html  _cylinder_inf_8cpp.html  _cylinder_inf_8cpp.js  _cylinder_inf_8hpp.html  _cylinder_inf_8hpp.js  _cylinder_inf_8hpp_source.html  _directional_light_8cpp.html  _directional_light_8cpp.js  (+292 more)
docs/html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_8.js  files_9.js  (+35 more)
docs/latex/: _a_light_8hpp.tex  _a_light_8hpp_source.tex  _a_materials_8hpp.tex  _a_materials_8hpp_source.tex  _a_shape_8hpp.tex  _a_shape_8hpp_source.tex  _ambient_light_8cpp.tex  _ambient_light_8hpp.tex  _ambient_light_8hpp_source.tex  _camera_8cpp.tex  _camera_8hpp.tex  _camera_8hpp_source.tex  _cone_8cpp.tex  _cone_8hpp.tex  _cone_8hpp_source.tex  _cone_inf_8cpp.tex  _cone_inf_8hpp.tex  _cone_inf_8hpp_source.tex  _cylinder_8cpp.tex  _cylinder_8hpp.tex  _cylinder_8hpp_source.tex  _cylinder_inf_8cpp.tex  _cylinder_inf_8hpp.tex  _cylinder_inf_8hpp_source.tex  _directional_light_8cpp.tex  _directional_light_8hpp.tex  _directional_light_8hpp_source.tex  _factory_8cpp.tex  _factory_8hpp.tex  _factory_8hpp_source.tex  _i_light_8hpp.tex  _i_light_8hpp_source.tex  _i_materials_8hpp.tex  _i_materials_8hpp_source.tex  _i_shape_8hpp.tex  _i_shape_8hpp_source.tex  _light_composite_8cpp.tex  _light_composite_8hpp.tex  _light_composite_8hpp_source.tex  _object_8cpp.tex  (+125 more)
scenes/: egypte.cfg  example.cfg  forest.cfg  mirror.cfg  object.cfg  refraction.cfg  scene-into-scene.cfg  simple_config.cfg  test_ambient_light.cfg  test_point_light.cfg  test_single_refraction.cfg  test_torus.cfg  transparency.cfg  triangle.cfg
src/: Camera.cpp  Camera.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Factory.cpp  Factory.hpp  ParserConfigFile.cpp  ParserConfigFile.hpp  Point3D.cpp  Point3D.hpp  Ray.hpp  Rectangle.cpp  Rectangle.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Vector3D.cpp  Vector3D.hpp  main.cpp
src/exceptions/: RaytracerException.hpp
src/lights/: ALight.hpp  AmbientLight.cpp  AmbientLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  ILight.hpp  LightComposite.cpp  LightComposite.hpp  PointLight.cpp  PointLight.hpp
src/materials/: AMaterials.hpp  IMaterials.hpp  Reflections.cpp  Reflections.hpp  Refractions.cpp  Refractions.hpp  Transparency.cpp  Transparency.hpp
src/maths/: Point3D.cpp  Point3D.hpp  Vector3D.cpp  Vector3D.hpp
src/shapes/: AShape.hpp  Cone.cpp  Cone.hpp  ConeInf.cpp  ConeInf.hpp  Cylinder.cpp  Cylinder.hpp  CylinderInf.cpp  CylinderInf.hpp  IShape.hpp  Object.cpp  Object.hpp  Plane.cpp  Plane.hpp  ShapeComposite.cpp  ShapeComposite.hpp  Sphere.cpp  Sphere.hpp  Torus.hpp  Triangle.cpp  Triangle.hpp
tests/: basicParsing.cpp  invalidConfig.cfg.bak  invalidParsing.cpp  invalidParsing.cpp.bak  missingField.cfg  test.cpp
tests/camera/: parseCamera.cfg  parseCamera.cpp
tests/camera/invalidFields/position/: invalidPositionFields.cpp  invalidX.cfg  invalidY.cfg  invalidZ.cfg
tests/camera/invalidFields/resolution/: invalidHeight.cfg  invalidResolutionFields.cpp  invalidWidth.cfg
tests/camera/invalidFields/rotation/: invalidRotationFields.cpp  invalidX.cfg  invalidY.cfg  invalidZ.cfg
tests/camera/missingFields/: missingFOV.cfg  missingFields.cpp
tests/camera/missingFields/position/: missingPositionFields.cpp  missingX.cfg  missingZ.cfg
tests/camera/missingFields/resolution/: missingHeight.cfg  missingResolutionFields.cpp
tests/camera/missingFields/rotation/: missingRotationFields.cpp  missingX.cfg  missingY.cfg  missingZ.cfg
tests/general/: generalTests.cpp  invalidConfig.cfg  negativeColor.cfg
tests/lights/: parseLights.cfg  parseLights.cpp
tests/lights/invalidFields/: invalidDiffuse.cfg  invalidDiffuse.cpp  missingAmbient.cfg  missingDiffuse.cfg  missingFields.cpp  negativeDiffuse.cfg
tests/lights/invalidFields/ambient/: invalidColorB.cfg  invalidColorG.cfg  invalidColorR.cfg  invalidFields.cpp  invalidIntensity.cfg  negativeIntensity.cfg
tests/lights/invalidFields/directional/: invalidFields.cpp  invalidX.cfg  invalidY.cfg  invalidZ.cfg
tests/lights/invalidFields/point/: invalidColorB.cfg  invalidColorG.cfg  invalidColorR.cfg  invalidFields.cpp  invalidIntensity.cfg  invalidX.cfg  invalidY.cfg  invalidZ.cfg  negativeIntensity.cfg
tests/lights/missingFields/: missingAmbient.cfg  missingDiffuse.cfg  missingDirectional.cfg
tests/lights/missingFields/ambient/: missingColor.cfg  missingColorB.cfg  missingColorG.cfg  (+3 more)
tests/primitives/: parsePrimitives.cfg  parsePrimitives.cpp
tests/test_scenes/: IncompleteCamera1.cfg  IncompleteCamera2.cfg  IncompleteCamera3.cfg  IncompleteCamera4.cfg  invalid.cfg  invalidConfig.cfg  invalidField.cfg  missingField.cfg  parseCamera.cfg  parseLights.cfg  parsePrimitives.cfg
tests/test_scenes/camera/: missingPosition.cfg  missingResolutionWidth.cfg  missingRotation.cfg  parseCamera.cpp
(+167 files in other folders)
